--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,3 +1,3 @@
-              - name: PHPCS Check with Annotations
-                uses: 10up/wpcs-action@v1.7.0
+name: PHPCS Check with Annotations
+uses: 10up/wpcs-action@v1.7.0
             
