--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -10,3 +10,5 @@ jobs:
         - uses: actions/checkout@v3
         - name: WPCS check
           uses: 10up/wpcs-action@stable
+		  with:
+		    use_local_config: 'true'
