--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -10,5 +10,6 @@ jobs:
         - uses: actions/checkout@v3
         - name: WPCS check
           uses: 10up/wpcs-action@stable
-		  with:
-		    use_local_config: 'true'
+          with:
+            standard: 'WordPress'
+            use_local_config: 'true'
